--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 
 <head>
-    <title>Hello World!</title>
+    <title>Hello Ravi Sir!</title>
 </head>
 
 <body>
 
-    <h1>Hello world!</h1>
-    <p>This is the first file in my new Git Repo.</p>
+    <h1>Hello Ravi Sir</h1>
+    <p>Please start Git learning for career.</p>
 
 </body>
 </html
