--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Hello Ravi Suman Sir & Mahaveer Sir!</title>
+    <title>Hello Ravi Suman Sir & Mahaveer Sir and Surendra Sir!</title>
 </head>
 
 <body>
