--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-    <h1>Hello Ravi Sir</h1>
+    <h1>Hello Ravi Sir & Mahaveer Sir and Surendra Sir, Ravindra Sir!</h1>
     <p>Please start Git learning for career.</p>
 
 </body>
