Updated index.html. Paragraph update

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Hello Ravi Sir & Mahaveer Sir and Surendra Sir, Ravindra Sir!</h1>
     <p>Please start Git learning for career.</p>
     <p>This time to learn Git Hub for website development work share</p>
-    <p>Ravi Sir is very Contras person.</p>
+    <p>Ravi Sir is very brightness person.</p>
 
 </body>
 </html
